--- a/web/css/shop.css
+++ b/web/css/shop.css
@@ -90,3 +90,60 @@ body{
     height: 600px;
     margin: 0 auto;
 }
+.contentLeft,.contentRight{
+    width: 540px;
+    height: 500px;
+    float: left;
+}
+.ping{
+    width: 200px;
+    height: 60px;
+    margin: 50px auto;
+}
+.ping a{
+    float: left;
+}
+.pingPic{
+    width: 60px;
+    height: 60px;
+}
+.pingPic img{
+    width: 100%;
+    height: 100%;
+}
+.pingPic img:hover{
+    transform: scale(1.3);
+}
+.pingWord{
+    color: #fff;
+    font-size: 18px;
+    line-height: 60px;
+    margin-left: 15px;
+}
+.pingWord:hover{
+    color: #ff4466;
+    font-size: 20px;
+}
+
+.return{
+    height: 60px;
+    width: 100px;
+    float: right;
+    margin-right: 60px;
+    margin-top: 30px;
+}
+.return a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    line-height: 60px;
+    color: #fff;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    background: rgba(255,255,255,0.4);
+    border-radius: 8px;
+}
+.return a:hover{
+    color: #ff4466;
+}
